Logo img fixed on iphone

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -41,10 +41,14 @@
   &__logo {
     position: absolute;
     top: 24px;
-    left: calc( 50% - #{$topLogoWidthMobile} / 2 + 6px);
+    left: calc( 50% - #{$topLogoWidth / 2});
 
     &.header__logo--burger-menu {
       z-index: 2;
+    }
+
+    @media (max-width:$mobileWidthPoint) {
+      left: calc(50% - #{$topLogoWidthMobile / 2});
     }
 
   }
